--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">Scow - Scan &amp; Know</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    
+    <string-array name="healthConditions">
+        <item>Non-Urgent</item>
+        <item>Standard</item>
+        <item>Urgent</item>
+        <item>Very Urgent</item>
+        <item>Immediate</item>
+    </string-array>
 </resources>
